[gd_scene load_steps=6 format=3 uid="uid://c3vmr8h4p7wxy"]

[ext_resource type="Script" path="res://scripts/scenes/MainScene.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/scenes/ServerList.gd" id="2_server"]
[ext_resource type="Script" path="res://scripts/scenes/ChannelList.gd" id="3_channel"]
[ext_resource type="Script" path="res://scripts/scenes/ChatUI.gd" id="4_chat"]
[ext_resource type="Script" path="res://scripts/scenes/UserList.gd" id="5_user"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServerList" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
script = ExtResource("2_server")

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/ServerList"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.15, 0.15, 0.18, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/ServerList"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServersContainer" type="VBoxContainer" parent="HBoxContainer/ServerList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="AddServerButton" type="Button" parent="HBoxContainer/ServerList"]
layout_mode = 2
text = "+"

[node name="MiddlePanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChannelList" type="VBoxContainer" parent="HBoxContainer/MiddlePanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_channel")

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MiddlePanel/ChannelList"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.18, 0.18, 0.22, 1)

[node name="ServerNameLabel" type="Label" parent="HBoxContainer/MiddlePanel/ChannelList"]
layout_mode = 2
text = "Select a server"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MiddlePanel/ChannelList"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChannelsContainer" type="VBoxContainer" parent="HBoxContainer/MiddlePanel/ChannelList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatUI" type="VBoxContainer" parent="HBoxContainer/MiddlePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_chat")

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MiddlePanel/ChatUI"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.22, 0.22, 0.26, 1)

[node name="ChannelHeader" type="HBoxContainer" parent="HBoxContainer/MiddlePanel/ChatUI"]
layout_mode = 2

[node name="ChannelNameLabel" type="Label" parent="HBoxContainer/MiddlePanel/ChatUI/ChannelHeader"]
layout_mode = 2
text = "# Select a channel"

[node name="MessagesScroll" type="ScrollContainer" parent="HBoxContainer/MiddlePanel/ChatUI"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="HBoxContainer/MiddlePanel/ChatUI/MessagesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputPanel" type="HBoxContainer" parent="HBoxContainer/MiddlePanel/ChatUI"]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="HBoxContainer/MiddlePanel/ChatUI/InputPanel"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."

[node name="SendButton" type="Button" parent="HBoxContainer/MiddlePanel/ChatUI/InputPanel"]
layout_mode = 2
text = "Send"

[node name="UserList" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("5_user")

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/UserList"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.18, 0.18, 0.22, 1)

[node name="TitleLabel" type="Label" parent="HBoxContainer/UserList"]
layout_mode = 2
text = "Members"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/UserList"]
layout_mode = 2
size_flags_vertical = 3

[node name="UsersContainer" type="VBoxContainer" parent="HBoxContainer/UserList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
